themes/jingdong2014/css/new-style.css
.new_top {
    width: 100%;
    background: rgba(20,20,20,.95);
    height: 45px;
    z-index: 9999;
    position: fixed;
}

.new_logo {
    width: 120px;
    float: left
}

.new_logo img {
    height: 40px;
    width: 125px;
    margin: 3px 0 0 10px
}

.new_main {
    float: left;
    margin-left: 50px
}

.shoucang {
    float: left;
    line-height: 45px;
    margin-left: 20px;
    position: relative
}

.shoucang img {
    width: 15px;
    margin-top: -4px
}

.shoucang a {
    color: #c6c6c6;
    color: rgba(255, 255, 255, .8);
    text-decoration: none
}

.shoucang a:hover {
    color: #ef383a
}

.dd_phone {
    display: none
}

.dd_phone img {
    width: 100px;
    height: 100px;
    margin-top: 17px
}

.new_login {
    margin-top: -41px;
    float: right
}

.new_login ul li {
    float: left;
    margin: 9px 14px 0 0;
}

.new_login ul li a {
    text-decoration: none;
    color: #eee;
    border: 1px solid #eee;
    padding: 3px 8px;
    font-family: "微软雅黑";
    font-size: 14px;
}

.new_login ul li a:hover {
    color: #333;
    background: #eee;
}

.new_search {
    width: 600px
}

#searchForm {
    display: inline-block;
    border-radius: 2px;
    position: absolute;
    top: 8px;
    left: 500px
}

#searchForm .text {
    width: 300px;
    font-size: 16px;
    line-height: 26px;
    color: #333;
    background: #fff;
    border-radius: 2px;
    border: 1px solid #333;
    padding: 2px 0 0 30px;
    outline: 0;
    border: none
}

#searchForm .button {
    border: none;
    width: 16px;
    height: 16px;
    background: url(../images/iconfont-search-dark16.png) center no-repeat;
    text-indent: 10em;
    position: absolute;
    left: 0;
    top: 0;
    padding: 15px;
    outline: 0
}

.new_search {
    height: 100%
}

.suggestions_box {
    background: #fff;
    position: fixed;
    top: 45px;
    left: 500px;
    padding: .5em 0;
    min-width: 500px;
    border-radius: 0 0 2px 2px;
    box-shadow: 0 8px 16px rgba(0, 0, 0, .1), 0 4px 8px rgba(0, 0, 0, .1)
}

#suggestions_list_id li {
    padding: 0 1em;
    line-height: 2em;
    font-size: 14px
}

.new_top-nav {
    position: fixed;
    width: 50px;
    /*bottom: 30%;*/
    z-index: 1000;
    border-radius: 2px;
}

.new_top-nav>ul>li {
    background: #eee;
    width: 50px;
    height: 50px;
}

.new_top-nav>ul>li>a {/*小方块*/
    color: #333;
    text-decoration: none;
    display: block;
    text-align: center;
    padding: 16px 0;
}
.new_top-nav ul li a {/*超链接*/
}

.new_top-nav ul li a i {
    display: block;
    margin-bottom: 3px
}

.new_top-nav span.menu {
    display: none
}

.hvr-sweep-to-bottom {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px transparent;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    position: relative;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: .3s;
    transition-duration: .3s
}

.hvr-sweep-to-bottom:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgb(255,100,100);
    opacity: 0;
}

.hvr-sweep-to-bottom:active,
.hvr-sweep-to-bottom:focus,
.hvr-sweep-to-bottom:hover {
    color: #fff
}

.hvr-sweep-to-bottom:active:before,
.hvr-sweep-to-bottom:focus:before,
.hvr-sweep-to-bottom:hover:before {
    opacity: 1;
}
/*
.new_top-nav ul li a.color {
    background: #e8008a
}

.new_top-nav ul li a.color1 {
    background: #01adef
}

.new_top-nav ul li a.color2 {
    background: #d7df29;
    text-decoration: none;
    position: relative;
    display: block
}*/

.new_top-nav ul li a:hover dd {
    position: absolute;
    display: block
}

.new_top-nav ul li a dd {
    left: 70px;
    top: 0;
    display: none
}
/*
.new_top-nav ul li a.color3 {
    background: #5e2c8f
}

.new_top-nav ul li a.color4 {
    background: #ffc410
}
*/
.new_blank {
    position: relative;
    z-index: 999;
    width: 100%;
    height: 30px;
    background: #fff;    
    background: rgba(20,20,20,.95);
    box-shadow: 0 0 10px rgba(0, 0, 0, .12)
}

.banner_ad {
    float: right
}

.banner_ad1 {
    width: 200px;
    height: 200px
}

.banner_ad1 a img:hover {
    margin-left: 5px;
    box-shadow: 0 0 10px #fff
}

.banner_ad2 {
    margin-top: 10px;
    width: 200px;
    height: 200px
}

.banner_ad2 a img:hover {
    margin-left: 5px;
    box-shadow: 0 0 10px #fff
}

.mydiv {
    text-align: center;
    width: 100%;
    z-index: 999;
    top: 20%;
    position: fixed!important;
    position: absolute
}

.bg,
.popIframe {
    background-color: #000;
    display: none;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    filter: alpha(opacity=50);
    opacity: .7;
    z-index: 1;
    position: fixed!important;
    position: absolute
}

.popIframe {
    filter: alpha(opacity=0);
    opacity: 0
}

#allmap {
    width: 1500px;
    height: 800px;
    overflow: hidden;
    font-family: utf-8;
    float: left
}

.new_footer {
    height: 20px;
    width: 100%;
    background: #000;
    float: left;
    bottom: 0;
    z-index: 9999;
    text-align: center
}

body {
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -ms-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out
}

body.new_active {
    transform: translate3d(150px, 0, 0);
    -webkit-transform: translate3d(150px, 0, 0);
    -moz-transform: translate3d(150px, 0, 0);
    -ms-transform: translate3d(150px, 0, 0);
    -o-transform: translate3d(150px, 0, 0);
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -ms-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out
}

.btn-slide-bar {
    width: 44px;
    height: 44px;
    float: left;
    cursor: pointer;
    position: relative;
    margin-top: 20%;
    z-index: 99999;
    background: #333;
    opacity: .5
}

.wraper-page {
    position: absolute;
    top: 44px;
    right: 0;
    bottom: 44px;
    left: 0;
    overflow: hidden
}

.slide-bar {
    position: absolute;
    background-color: #333;
    width: 150px;
    height: 100%;
    left: 0;
    z-index: 2;
    transform: translate3d(-150px, 0, 0);
    -webkit-transform: translate3d(-150px, 0, 0);
    -moz-transform: translate3d(-150px, 0, 0);
    -ms-transform: translate3d(-150px, 0, 0);
    -o-transform: translate3d(-150px, 0, 0);
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -ms-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    bottom: initial
}

.wrapper-scroll {
    -webkit-overflow-scrolling: touch;
    overflow-scrolling: touch;
    position: absolute;
    /*overflow: hidden;避免阴影被裁剪*/
    margin-top: 20px
}

.new_section {
    float: left;
    overflow: hidden;
    border-radius: 2px;
    transition: all .3s;
    box-shadow: 0 0px 1px 0 rgba(0,0,0,0.05), 0 2px 4px 0 rgba(0,0,0,0.1);
}

.new_section:hover {
    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1), 0 4px 8px 0 rgba(0,0,0,0.2);
}
.web_content {
    width: 3862px;
    width: -moz-max-content;
    width: -webkit-max-content;
    width: -o-max-content;
    width: -ms-max-content;
    width: max-content
}

.breadcrumb_goods {
    height: 15px;
    padding: 0 0 3px 10px;
    overflow: hidden;
    vertical-align: baseline;
    width: 15%;
    float: left;
    margin-top: 4px
}

.slide-bar ul {
    margin-top: 20%
}

.slide-bar ul li {
    margin: 20px 0 0 40px
}

.vanishBG {
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background: #f6f6f6;
    border-right: 1px solid #eee;
}

.new_left {
    margin-top: 95px;
    background: #f6f6f6;
    overflow: hidden;
    border-radius: 2px;
    padding: 10px;
}

.new_mc {
    text-align: left;
}

.new_mt {
    /*padding-left: 2em;*/
}

.new_mt ul li {
    display: inline-block;
}

.new_mt h2 {
    padding-left: 11px;
    margin-bottom: 5px;
    border-left: 3px solid rgb(255,100,100);
    margin-left: -10px;
}

.new_mc ul {
    width: 100%
}

.new_mc ul li {
    /*text-align: center;*/
    /*因为影响到了商品标题*/
}

.new_mc ul li a {
    text-decoration: none;
    padding: .4em;
    display: inline-block;
}

.new_gallery li {
    border: 1px solid #ddd;
    margin: 0 10px 10px;
}

.bdshare-button-style0-16 {
    padding: 2px 10px
}

.bdshare-button-style0-16 a {
    width: 0;
    overflow: hidden;
}

.new_goods_footer {
    width: 100%;
    height: 20px;
    float: left;
    position: fixed;
    bottom: 0;
    z-index: 9
}

.new_goods_name {
    float: right;
    width: 680px;
    padding: 50px 0;
    margin-right: 20px;
}

.new_goods_name_s {
    /*width: 700px;*/
}

.new_goods_name_s h1 {
    font-size: 28px;
    line-height: 38px;
}

.new_goods_name_s strong {
    font: 900 14px/1.5em "microsoft yahei";
    color: #797979
}

.new_bought_goods {
    width: 1350px;
    height: 250px;
    bottom: 0;
    position: absolute;
    margin: 10px 20px 0;
}

.goods_mt {
    /*border-bottom: 1px #000 solid*/
}

.goods_mc {
    /*margin-top: 20px*/
}

.goods_mc ul li {
    width: 150px;
    float: left;
    text-align: center
}

.new_goods {
    float: left
}

/*商品信息块*/
#summary {
    float: left;
}

#summary .dt {
    line-height: 24px;
}

#product-detail {
    background: #fff;
    margin: 20px;
}

.tab a {
    text-decoration: none;
    border-radius: 9px;
    padding: 1px 7px;
}

.tab a:hover {
    color: #fff;
    background: rgb(255,100,100);
}

#comment .mt {

}

